--- a/pages/camionetas.html
+++ b/pages/camionetas.html
@@ -30,7 +30,7 @@
     </header>
     <!--fin header-->
 
-    <main>
+    <main class="main">
         <div class="portada">
             <h1 class="titulo-portada">CAMIONETAS</h1>
         </div>
