--- a/index.html
+++ b/index.html
@@ -41,11 +41,34 @@
          <!--main-->
 
         <main>
-            <div class="principal portada">
-                <div><img src="multimedia/img/presentacion.png" alt="portada" width="100%"></div>
-                <h1>Toyota</h1>
-                <h2 class="subtitle">PLANES TOYOTA</h2>
-            </div>
+            <section>
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="multimedia/img/presentacion.png" class="d-block w-100" alt="presentacion portada">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="multimedia/img/galeria.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="multimedia/img/toyota.png" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Atras</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Adelante</span>
+                    </button>
+                  </div>
+            </section>
 
 
             <div class="quieneSomos texto">
