agregando contenido real a los lorem y modificaciones de parrafo

--- a/pages/autos.html
+++ b/pages/autos.html
@@ -53,12 +53,31 @@
 
                 <section class="section-a">
                     <div class="yaris">
-                        <h3 id="yaris">Toyota Yaris</h3>
+                        <h3 id="yaris">Toyota Yaris hatchback</h3>
                     </div>
                     <div>
                         <img src="../multimedia/img/yarisrojo.png" alt="yaris" width="200px">
 
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa quidem, quis quae ratione nihil eos quod cum modi assumenda sunt, ducimus magnam odio dignissimos quisquam at repudiandae facere labore officiis.</p>
+                        <p>
+                            <div> 
+                                Su nuevo modelo Yaris, que se ofrece en una versión CVT de 5 puertas, con el que amplía su line-up en Argentina y que representa una apuesta fuerte de la marca en el segmento de vehículos compactos, al que ingresó con éxito gracias a la introducción de Etios en 2013. En términos de diseño exterior, Yaris es estilizado y con una vista frontal que le otorga una personalidad con aire deportivo. Por dentro, ofrece un gran espacio interior que permite el transporte de 5 personas cómodas, y una capacidad de carga de 326 lt, una de las más amplias del segmento. Yaris ofrece una nueva alternativa tanto para los clientes de la marca, como para aquellos que aún no son usuarios de Toyota pero buscan un vehículo con personalidad, espacio y comodidad, que los acompañe en un momento importante de sus vidas.    
+                            </div>
+
+                            <div>
+                                Las ópticas delanteras halógenas alargadas, integradas a la vista lateral, junto con la parrilla inferior de forma trapezoidal, le dan al nuevo Toyota Yaris un diseño frontal con una mirada penetrante (Keen Look). En tanto, las amplias líneas laterales marcadas junto con las llantas de aleación de 15" (165 / 60 R15) acentúan su diseño dinámico. El diseño trasero despliega una imagen ancha y estable. Los pilares negros y el diseño aerodinámico de los faros (en forma de C) realzan su vista trasera. Para reforzar la excelente economía de combustible y la estabilidad del nuevo Toyota Yaris se incorporaron varias medidas aerodinámicas como, por ejemplo, el diseño del techo que permite una disminución del ruido y un mejor flujo de aire dándole mayor estabilidad, optimizando la sensación de manejo y obteniendo un menor consumo de combustible. Los espejos exteriores y los faros traseros presentan unas aletas aerodinámicas que también aportan una mayor estabilidad y una disminución del ruido del viento a altas velocidades.
+                            </div>
+                            <div>
+                        El nuevo Toyota Yaris presenta una excelente calidad en sus terminaciones y materiales. En su espacioso interior se aprecian detalles satinados y cromados: las puertas y el tablero fueron desarrollados con materiales suaves al tacto y los asientos están tapizados en tela con doble costura de hilo rojo. El asiento del conductor además cuenta con ajuste en altura para mayor confort.
+
+                            
+                         El panel de instrumentos divide la información en 3 partes. A la izquierda se encuentra el tacómetro y a la derecha el medidor de combustible y otros indicadores lumínicos. En el centro con borde cromado se encuentra el velocímetro y la computadora de abordo, que permite ver información de viaje, consumo de combustible cada 100 km y autonomía. Además posee un indicador "ECO" de consumo para quienes privilegian una conducción más económica.
+                            </div>
+
+                            <div>
+                                La performance es aportada por el excelente motor 2NR-FE Toyota de 1.5 litros (1496cc), 4 cilindros en línea, 16 válvulas con doble árbol de levas a la cabeza y cumple con normativa de emisiones Euro5. El motor cuenta con tecnología Dual VVT-i que ajusta continuamente el instante de apertura y cierre de las válvulas de admisión y escape. De esta coordinación constante resulta una mayor potencia y, a su vez, una mejor optimización del consumo de combustible, reduciendo las emisiones de CO2.
+                            </div>
+
+                        </p>
                     </div>
                 </section>
 
@@ -68,7 +87,20 @@
                     </div>
                     <div>
                         <img src="../multimedia/img/corollablanco.jpg" alt="corolla" width="200px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam cum explicabo optio recusandae aperiam doloribus officiis id minus facilis! Voluptatum pariatur tempore nostrum. Ut, iure vel eveniet voluptas non sunt.</p>
+                        <p>
+                            <div>
+                                El Toyota Corolla se asienta sobre la plataforma TNGA (Toyota New Global Architecture) y es más bajo (cuatro centímetros), más ancho (tres centímetros) y más largo que su predecesor: el Toyota Auris. La versión de cinco puertas mide 4,37 metros de largo, 1,79 metros de ancho y 1,43 metros de alto; la capacidad de su maletero, de formas muy regulares, es de 361 litros.
+                            </div>
+                            <div>
+                                El Toyota Corolla es un compacto con empaque que apuesta por un diseño llamativo con líneas con personalidad, dinámicas y una cintura que no pasa desapercibida. Bajo esa nariz redondeada aparece una malla de nido de abeja en tono negro ocupa la parrilla ubicada en la defensa frontal y cuenta con unas inserciones cromadas en las luces antiniebla. Las afiladas ópticas delanteras cuentan con tecnología LED, igual que las traseras. De camino a la zaga se puede observar que sus pasos de rueda están bien marcados y que la forma del pilar C confiere a la parte trasera mucha carga visual.
+                            </div>
+                            <div>
+                                La gama mecánica del Toyota Corolla está compuesta por dos mecánicas híbridas, disponibles en las tres carrocerías, que arrojan unas emisiones de 102 a 107 g/km de CO2 y unos consumos entre 4,6 y 5,3 l/100 km.
+                            </div>
+                            <div>
+                                Su mayor ancho de vías y la suspensión trasera independiente hacen que el coche gire mucho más plano en curvas y sea ágil en los cambios de apoyo. Mantiene el aplomo ante cualquier bache y un buen compromiso a medio camino entre la comodidad y la firmeza. Es seguro, dinámico (aunque su dirección está filtrada y asistida) y sigue siendo un coche muy eficiente.
+                            </div>
+                        </p>
 
                     </div>             
                 </section>
@@ -101,7 +133,7 @@
                         <h3 id="camry">Toyota Camry</h3>
                     </div>
                     <div>
-                        <img src="../multimedia/img/camry.webp" alt="camry" width="200px">
+                        <img src="../multimedia/img/camry.jpg" alt="camry" width="200px">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nisi dolor numquam! Accusamus, voluptates, exercitationem voluptatem odio quis soluta repellat sed nesciunt necessitatibus, natus quia cumque tempora quibusdam. Quasi, dignissimos.</p>
                     </div>
                 </section>
