agregando mas contenido y arreglando titulos

--- a/pages/autos.html
+++ b/pages/autos.html
@@ -56,7 +56,7 @@
                         <h3 id="yaris">Toyota Yaris hatchback</h3>
                     </div>
                     <div>
-                        <img src="../multimedia/img/yarisrojo.png" alt="yaris" width="200px">
+                        <img src="../multimedia/img/yarisrojo.png" alt="yaris" width="300px">
 
                         <p>
                             <div> 
@@ -86,7 +86,7 @@
                         <h3 id="corolla">Toyota Corolla</h3>
                     </div>
                     <div>
-                        <img src="../multimedia/img/corollablanco.jpg" alt="corolla" width="200px">
+                        <img src="../multimedia/img/corollablanco.jpg" alt="corolla" width="300px">
                         <p>
                             <div>
                                 El Toyota Corolla se asienta sobre la plataforma TNGA (Toyota New Global Architecture) y es más bajo (cuatro centímetros), más ancho (tres centímetros) y más largo que su predecesor: el Toyota Auris. La versión de cinco puertas mide 4,37 metros de largo, 1,79 metros de ancho y 1,43 metros de alto; la capacidad de su maletero, de formas muy regulares, es de 361 litros.
@@ -110,8 +110,21 @@
                         <h3 id="etios">Toyota Etios</h3>
                     </div>
                     <div>
-                        <img src="../multimedia/img/etios.webp" alt="etios" width="200px">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima accusamus explicabo accusantium, eaque id molestiae. Consectetur officia, nemo sapiente nostrum expedita doloremque alias minus iusto aliquid, quisquam veritatis officiis quam.</p>
+                        <img src="../multimedia/img/etios.webp" alt="etios" width="300px">
+                        <p>
+                            <div>
+                                El Toyota Etios continua reforzando su actitud gracias a la incorporación de un nuevo diseño de parrilla, llantas de aleación y faros oscurecidos. Además, incorpora de serie Control de estabilidad y Control de tracción que en conjunto con su excelente performance de motor y transmisión hacen al Etios la opción ideal para recorrer el camino.
+                            </div>
+                            <div>
+                                Etios incorpora control de estabilidad (VSC), control de tracción (TRC) y asistente de ascenso en pendiente (HAC) en todas sus versiones. Los frenos de alta reacción que combinan capacidad antibloqueo con distribución de fuerzas (ABS con EBD), las barras laterales de protección, el sistema de anclaje ISOFIX y los airbags frontales aportan tranquilidad y seguridad a todos los pasajeros.
+                            </div>
+                            <div>
+                                Entre sus aspectos tecnológicos se destacan dos pantallas de alta resolución: una muestra el velocímetro digital y la otra exhibe el tacómetro y datos como temperatura de motor, consumo y autonomía, entre otros.
+                            </div>
+                            <div>
+                                Dirección asistida eléctricamente, aire acondicionado, apertura eléctrica de baúl, cierre centralizado a distancia integrado en llave, levantavidrios eléctricos delanteros, display de información múltiple digital de 4,2″, equipo de audio con CD, MP3, Bluetooth, USB y entrada auxiliar.
+                            </div>
+                        </p>
 
 
                     </div>
@@ -122,8 +135,24 @@
                         <h3 id="prius">Toyota Prius</h3>
                     </div>
                     <div>
-                        <img src="../multimedia/img/prius.jpg"prius" width="200px">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim numquam possimus itaque deleniti ipsam facere praesentium quisquam excepturi maiores ad labore minus, vel, aperiam at exercitationem amet perferendis inventore tenetur?</p>
+                        <img src="../multimedia/img/prius.jpg"prius" width="300px">
+                        <p>
+                            <div>
+                                Ya desde la primera vista el Prius se ve como un auto distinto a lo acostumbrado. Su particular diseño busca remarcar su naturaleza híbrida, pero le sirve también para obtener un muy buen coeficiente aerodinámico de 0,24 Cx. Es un poco más grande que la generación anterior con 4,54 m. de largo; un ancho de 1,76 m y una altura de 1,49 m. La distancia entre ejes es muy buena, con 2,7 metros, lo que le otorga un muy buen espacio interior.
+                            </div>
+                            <div>
+                                Esta cuarta generación está equipada con un motor naftero de tipo Atkinson de 1.8 litros de cilindrada que genera 98 CV y 142 Nm de torque. Lo que le da el carácter de “híbrido” es que funciona asociado a un motor eléctrico que por sí solo genera una potencia de 72 CV y 163 Nm.
+                            </div>
+                            <div>
+                                En el centro de la consola domina una pantalla táctil de 7” para el sistema multimedia, en donde también se proyecta la cámara de retroceso (con guías y asistencia sonora) y el navegador satelital. Es un dispositivo similar al que equipan otros modelos de Toyota, y aquí podría evolucionar en algunos puntos. Si bien es lo suficientemente intuitivo, las funciones del sistema de audio no permiten una rápida búsqueda de estaciones o subir o bajar el volumen con rapidez, entre otras cosas.
+                            </div>
+                            <div>
+                                En cuanto al equipamiento de seguridad, como es de esperar cuenta con frenos con ABS y distribución electrónica de frenado (EBD), más asistencia de frenado de emergencia (BA). También tiene de serie el control de estabilidad (que Toyota denomina VSC) y control de tracción (TRC).
+                            </div>
+                            <div>
+                                En seguridad pasiva está bien equipado también, con un total de 7 airbags y  sistemas de anclajes ISOFIX en los asientos traseros, entre otras cosas. Se puede destacar también el avanzado sistema de iluminación exterior, con faros delanteros bi-LED, antinieblas de LED, y lo mismo para el conjunto óptico trasero, con lo que logra una excelente visibilidad en su conjunto.
+                            </div>
+                        </p>
                     </div>
                         
                 </section>
@@ -133,8 +162,28 @@
                         <h3 id="camry">Toyota Camry</h3>
                     </div>
                     <div>
-                        <img src="../multimedia/img/camry.jpg" alt="camry" width="200px">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nisi dolor numquam! Accusamus, voluptates, exercitationem voluptatem odio quis soluta repellat sed nesciunt necessitatibus, natus quia cumque tempora quibusdam. Quasi, dignissimos.</p>
+                        <img src="../multimedia/img/camry.jpg" alt="camry" width="300px">
+                        <p>
+                            <div>
+                                Su figura impacta por su logrado diseño deportivo. El frontal es agresivo, con un lanzado capot que se ensambla perfectamente con la amplia parrilla que tiene elementos horizontales color carrocería y un gran logo de Toyota en el centro. Además, las grandes ópticas que se desplazan hacia los guardabarros, junto al paragolpes envolvente que posee una abertura en el centro y dos faros de profundidad en cada extremo, complementan en forma armoniosa todo el conjunto.
+                            </div>
+                            <div>
+                                El interior del Camry es por demás cómodo y acogedor donde 5 personas pueden viajar placenteramente por la amplitud del espacio, gracias a las dimensiones de su carrocería (4.805 mm. de largo; 1.820 mm. de ancho; 1.460 mm. de alto y 2.775 mm. de distancia entre ejes).
+
+                                Además, sobra lujo por donde se lo mire; desde el tapizado de fino cuero en los asientos y paneles de puertas; el volante de cuatro rayos revestido en cuero y madera; los insertos de madera de nogal, cuero y aluminio en tablero, consola y puertas; la empuñadura de la palanca de cambios cubierta en madera de nogal y cuero, hasta la fina terminación de todo el conjunto. Por otra parte, el Camry tiene distribuidos en su interior numerosos espacios porta-objetos.
+                            </div>
+                            <div>
+                                Este vehículo viene equipado con un motor naftero de 6 cilindros dispuestos en V, de 3.456 cc. de cilindrada y una relación de compresión de 10.8:1. La alimentación es por inyección electrónica multipunto, y la distribución por doble árbol de levas por bancada, comandados por cadena, 24 válvulas DOHC, sistema Doble VVT-i. Eroga una potencia de 277 CV a 6.200 rpm, con un torque de 346 Nm a 4.700 rpm.
+                            </div>
+                            <div>
+                                La suspensión delantera del Camry es independiente, con un esquema McPherson, amortiguadores telescópicos, resortes helicoidales y barra estabilizadora. La trasera también es independiente, con un esquema multibrazo, con amortiguadores telescópicos, resortes helicoidales y barra estabilizadora.
+
+                                Por su parte, los frenos delanteros son de discos ventilados y los traseros de discos sólidos. Ambos trenes cuentan con Sistema Antibloqueo de Freno (ABS), Distribución Electrónica de Frenado (EBD) y Asistente de Frenado (BA).
+                            </div>
+                            <div>
+                                El Toyota Camry trae un completo equipamiento de seguridad, tanto activa como pasiva, debiéndose destacar los sistemas de Control de Tracción (TRC) y de Estabilidad (VSC) que aseguran un total dominio del vehículo frente a situaciones difíciles.
+                            </div>
+                        </p>
                     </div>
                 </section>
 
