--- a/pages/camionetas.html
+++ b/pages/camionetas.html
@@ -45,22 +45,22 @@
             </nav>
         </div>
 
-        <section>
+        <section class="productos-camioneta">
             <div>
                 <h3 id="hilux">Toyota Hilux</h3>
             </div>
             <div>
-                <img src="../multimedia/img/hilux.png" alt="hilux" width="200px">
+                <img src="../multimedia/img/hilux.png" alt="hilux" width="300px">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis impedit voluptate laboriosam alias dolorem amet nostrum, similique culpa libero dolores repellendus natus inventore fugiat beatae qui laborum nesciunt mollitia dignissimos.</p>
             </div>
         </section>
 
-            <section>
+            <section class="productos-camioneta">
                 <div>
                     <h3 id="sw4">Toyota SW4</h3>
                 </div>
                 <div>
-                    <img src="../multimedia/img/sw4.jpg" alt="sw4" width="200px">
+                    <img src="../multimedia/img/sw4.jpg" alt="sw4" width="300px">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum at itaque est voluptatibus ea, minus odit consequatur quis, enim officia nulla nisi molestias natus, repudiandae inventore dolor vel consequuntur labore!</p>
                 
                 </div>
