agregando contenido a pag ayuda , modificando las animaciones y arreglando poblemas con grid

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <div class="grid-ayuda">
+
     <header>
 
         <img class="menuLogo" src="../multimedia/img/logomarcaa.png" alt="">
@@ -27,46 +29,42 @@
         </nav>
     </header>
 
-    <main>
+    <main class="preguntas">
         <div class="portada">
             <h1 class="titulo-portada">Ayuda</h1>
         </div>
         <div>
-            <h2>Preguntas frecuentes</h2>
-            <h3>Pregunta 1</h3>
+            <h2 class="preguntas__h2">Preguntas frecuentes</h2>
+            <h3>
+                ¿Qué es un Plan de Ahorro para fines determinados?
+            </h3>
             
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus aspernatur ipsam perspiciatis similique
-                tenetur, suscipit, error aut neque natus quas explicabo odit ducimus alias? Quidem molestiae,
-                reprehenderit error, maxime ab autem nihil nesciunt iste commodi mollitia iure officia? Voluptates, quo
-                placeat quod aperiam aut rem. Ipsa distinctio quam officiis modi dolore, quo voluptatem beatae magnam
-                animi laborum id explicabo nemo reiciendis. Consequatur corrupti doloribus perferendis necessitatibus
-                debitis, saepe voluptates rem?</p>
-            <h3>Pregunta 2</h3>
+            <p>El Plan de Ahorro es un sistema a través del cual un grupo determinado de personas realiza un aporte mensual a un fondo común para la compra de bienes (automotor en este caso) que se adjudicarán por sorteo y licitación de acuerdo con la disponibilidad y durante la vigencia del plan (generalmente 84 meses).</p>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum tempora repellendus temporibus
-                molestias, repudiandae rem incidunt voluptates labore sit consequatur quaerat odio reprehenderit ipsam
-                alias nemo eius voluptas perferendis ullam vero officia voluptatem tenetur non recusandae! Sunt velit
-                fugit cupiditate?</p>
+            <h3>
+                ¿Quíen controla la actividad Planes de Ahorro?
+            </h3>
 
-            <h3>Pregunta 3</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, perferendis. Officiis est pariatur
-                distinctio cupiditate sed reiciendis, consequatur praesentium enim id officia cum recusandae sunt
-                aliquid asperiores odit explicabo atque accusamus voluptates porro amet minus! Maiores, vitae rem animi
-                omnis dolor quae velit, quibusdam iusto dicta repellat totam laboriosam voluptatum?</p>
+            <p>INSPECCIÓN GENERAL DE JUSTICIA (IGJ) controla el cumplimiento de las pautas establecidas.</p>
 
-            <h3>Pregunta 4</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ab ipsa et natus hic architecto aliquam iure! Quod voluptate numquam laudantium quos vitae, dolorum voluptates vero aliquid neque? Aliquid, est?</p>
+            <h3>
+                ¿Cuáles son los requisitos para pedir un Plan de Ahorro?
+            </h3>
+            <p>Para Personas Físicas, contar con una edad mínima de 18 años, o menores que se encuentren emancipados y una edad máxima de 72 años al momento de la suscripción. Completar y firmar en cualquier concesionario de la red una solicitud de adhesión y sus anexos correspondientes. Para Personas Jurídicas, presentar la documentación societaria respaldatoria y acreditar la personería jurídica. Abonar la primera cuota mensual.</p>
 
-            <h3>Pregunta 5</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quod doloribus molestiae error expedita laborum, praesentium corrupti placeat? Excepturi doloribus ipsam magnam hic doloremque incidunt illo libero beatae velit quisquam?</p>
+            <h3>
+                ¿Qué es el valor móvil?
+            </h3>
+            <p>
+                Es el precio oficial del vehículo objeto del plan, al contado, y final con impuestos, sugerido para la venta al público por Toyota Argentina S.A., que coincide con el importe base de cálculo para la determinación de las Cuotas Puras.
+            </p>
+
+            <h3>¿Qué es el derecho de adjudicacíon?</h3>
+            <p>
+                Es el importe que se abona a la Administradora (Toyota Plan) por la adjudicación del automotor. Es el 1% del valor vigente del automotor al momento del pago de este concepto. para mayores datos consultar las condiciones generales de la solicitud de adhesión. Para mayor información consultar las Condiciones Generales de la Solicitud de Adhesión.
+            </p>
         </div>
 
-
-
-
-        <div class="contactoAyuda">
-            <a href="#Contacto">Comunicate con nosotros</a>
-        </div>
 
     </main>
 
@@ -84,7 +82,7 @@
         </div>
         <a class="wsp" href="https://web.whatsapp.com/"><img src="../multimedia/logos/wsp.png" alt="wsp logo"></a>
     </footer>
-
+ </div>
 </body>
 
 </html>
